Se añade funcionalidades de correo con identificación con expresiones regulares

--- a/config.yml
+++ b/config.yml
@@ -3,7 +3,9 @@ twitter:
   access_secret : 'NbzmypwIj5CoImRIwGs8NQiu2Yl6wTtzp7fkicURPLfi7'
   consumer_key : 'eoUh6hm3Nvk4M0DCVjq0HJ2AU'
   consumer_secret : 'PrjgcsbR6N1hwPxzkhh4bzC5vXJunoqGz6CDrlXHtoKG8DaZQm'
-  path : '/home/ralymontes/twitter/source/files/'
+  path : '/root/twitter/source/files/'
 correo:
   user: 'israel.montes@sm4rt.com'
   pwd: 'Ralymontes1111'
+  dest: 'isaac.i.montes@gmail.com'
+  subject: 'Posible ataque ejecutado'
